--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lora|Raleway:400,600" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Restaurant</title>
+    <link REL="SHORTCUT ICON" HREF="favicon.ico">
+    <title>restaurant</title>
 </head>
+
 <body>
     <!-- HEADER SECTION BEGINS-->
     <header class="header">
@@ -17,7 +21,7 @@
             <div class="wrapper headerNav__wrapper">
                 <h1 class="h1 headerNav__h1">Restaurant</h1>
                 <p class="p hamburger"><i class="fas fa-bars"></i></p>
-		        <div class="menu">
+                <div class="menu">
                     <ul class="headerNav__ul">
                         <li class="exit-responsive"><i class="fas fa-sort-up"></i></li>
                         <li class="headerNavNav__li"><a href="#home">Home</a></li>
@@ -68,12 +72,13 @@
                     </div>
                     <div class="about__half about__content" id="about">
                         <h4 class="h4 about__h4">About Us</h4>
-                        <p class="p about__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                        <p class="p about__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
                         <button class="button button--red">
                             <p class="button__p">More</p>
                         </button>
                     </div>
-                </div>    
+                </div>
             </div>
         </section>
         <!-- ABOUT SECTION ENDS -->
@@ -81,8 +86,10 @@
         <section class="welcome">
             <div class="wrapper welcome__wrapper">
                 <h3 class="h3 welcome__h3">Welcome to Restaurant</h3>
-                <p class="p welcome__p">Suspendisse convallis turpis sem, nec tincidunt mauris tincidunt sed. Nunc vulputate feli s eu nunc moletie molestie
-                    vel tempus purus. Donec sed tellus mi. Fusce tincidunt tudin arcu, nec fringilla ex he rerit eget. Maecenas fringilla
+                <p class="p welcome__p">Suspendisse convallis turpis sem, nec tincidunt mauris tincidunt sed. Nunc
+                    vulputate feli s eu nunc moletie molestie
+                    vel tempus purus. Donec sed tellus mi. Fusce tincidunt tudin arcu, nec fringilla ex he rerit eget.
+                    Maecenas fringilla
                     neque eu est tincon. Vivamus consequat variusimperdiet. Mauris laoreet risus pharetra ollis.</p>
                 <button class="button button--grey">
                     <p class="button__p">View</p>
@@ -98,7 +105,8 @@
                     <ul class="services__gallery__ul">
                         <li class="services__gallery__li">
                             <h4 class="h4 services__gallery__h4">Custom Catering</h4>
-                            <p class="p services__gallery__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                            <p class="p services__gallery__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                sed do eiusmod tempor incididunt ut labore
                                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
                         </li>
                         <li class="services__gallery__li">
@@ -109,7 +117,8 @@
                         </li>
                         <li class="services__gallery__li">
                             <h4 class="h4 services__gallery__h4">Event Booking</h4>
-                            <p class="p services__gallery__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                            <p class="p services__gallery__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                sed do eiusmod tempor incididunt ut labore
                                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
                         </li>
                     </ul>
@@ -130,8 +139,9 @@
                         <i class="reviews__icon fas fa-angle-right"></i>
                     </a>
                 </div>
-               
-                <p class="p reviews__p reviews__p--grey">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+
+                <p class="p reviews__p reviews__p--grey">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
                 <p class="p reviews__p reviews__p--grey reviews__p--author">~ J. Michels ~</p>
             </div>
         </section>
@@ -139,7 +149,7 @@
         <!-- EVENT SECTION BEGINS -->
         <section class="events">
             <h3 class="h3 events__h3">Events</h3>
-            <div class="events__sampleEvent"> 
+            <div class="events__sampleEvent">
                 <ul class="events__sampleEvent__ul">
                     <li class="events__sampleEvent__li">
                         <img src="images/image-9.jpeg" alt="plate with burger, coleslaw and chips">
@@ -147,7 +157,8 @@
                             <div class="container">
                                 <h3 class="h3 events__h3--white">Sample Event</h3>
                             </div>
-                            <p class="p events__p--white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                            <p class="p events__p--white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                                do eiusmod tempor incididunt ut labore et dolore magna.</p>
                         </div>
                     </li>
                     <li class="events__sampleEvent__li events__sampleEvent__text">
@@ -156,7 +167,8 @@
                             <div class="container">
                                 <h3 class="h3 events__h3--white">Sample Event</h3>
                             </div>
-                            <p class="p events__p--white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                            <p class="p events__p--white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                                do eiusmod tempor incididunt ut labore et dolore magna.</p>
                         </div>
                     </li>
                     <li class="events__sampleEvent__li">
@@ -165,7 +177,8 @@
                             <div class="container">
                                 <h3 class="h3 events__h3--white">Sample Event</h3>
                             </div>
-                            <p class="p events__p--white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                            <p class="p events__p--white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                                do eiusmod tempor incididunt ut labore et dolore magna.</p>
                         </div>
                     </li>
                 </ul>
@@ -232,7 +245,7 @@
                 </div>
             </div>
         </secion>
-    </main> 
+    </main>
     <!-- MAIN SECTION ENDS -->
     <!-- FOOTER SECTION BEGINS -->
     <footer class="footer" id="contact">
@@ -260,7 +273,9 @@
                 <li class="footerSections__third">
                     <h4 class="h4 footer__h4">About Us</h4>
                     <p class="p footer__p">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
                     </p>
                 </li>
                 <li class="footerSections__third">
@@ -301,7 +316,7 @@
                     <i class="fab fa-instagram"></i>
                 </a>
                 <a class="footerSections__socialMedia__a" href="#">
-                    <i class="fab fa-pinterest-p"></i>      
+                    <i class="fab fa-pinterest-p"></i>
                 </a>
             </div>
         </div>
@@ -328,15 +343,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
 
-       	$('.hamburger').on('click', function () {
-                $('.menu').addClass('show');
-            });
+        $('.hamburger').on('click', function () {
+            $('.menu').addClass('show');
+        });
 
         $('.exit-responsive').on('click', function () {
-                $('.menu').removeClass('show');
-            });
-    
+            $('.menu').removeClass('show');
+        });
+
     </script>
     <!-- SCRIPT SECTION ENDS -->
 </body>
+
 </html>
